--- a/index.html
+++ b/index.html
@@ -7,47 +7,138 @@
 
 <style>
 body { font-family: Arial, sans-serif; margin: 0; background: #f2f6ff; }
+
+/* ===== HEADER ===== */
 .header-bar {
-  position: sticky; top: 0; z-index: 1000;
-  background: #f2f6ff; padding: 12px 15px;
-  display: flex; gap: 10px;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background: #f2f6ff;
+  padding: 10px 12px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
   box-shadow: 0 2px 6px rgba(0,0,0,.15);
 }
-.icon-btn {
-  background: #003f88; color: #fff; border: none;
-  border-radius: 8px; padding: 10px 12px;
-  font-size: 18px; cursor: pointer;
+
+.header-title {
+  flex: 1;
+  text-align: center;
 }
-.header-title { flex: 1; text-align: center; }
+
+.header-title h2 {
+  margin: 0;
+  color: #003f88;
+}
+
+.header-title small {
+  display: block;
+  font-size: 12px;
+  color: #555;
+  margin-top: 2px;
+}
+
+/* ===== ICON BUTTONS ===== */
+.icon-group {
+  display: flex;
+  gap: 6px;
+}
+
+.icon-wrap {
+  position: relative;
+}
+
+.icon-btn {
+  background: #003f88;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  padding: 10px 12px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+/* Tooltip text */
+.icon-wrap span {
+  position: absolute;
+  bottom: -22px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #003f88;
+  color: #fff;
+  font-size: 11px;
+  padding: 2px 6px;
+  border-radius: 4px;
+  white-space: nowrap;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.2s;
+}
+
+/* Show on hover or focus (mobile tap) */
+.icon-wrap:hover span,
+.icon-btn:focus + span {
+  opacity: 1;
+}
+
+/* ===== CONTENT ===== */
 .container { padding: 20px; }
+
 .card {
-  background: #fff; padding: 20px;
+  background: #fff;
+  padding: 20px;
   border-radius: 12px;
   box-shadow: 0 2px 6px rgba(0,0,0,.15);
 }
+
 .label { font-weight: bold; color: #003f88; }
+
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 16px;
 }
-.button-wrap { margin-top: 25px; text-align: left; }
+
+.button-wrap {
+  margin-top: 25px;
+  text-align: left;
+}
+
 .action-btn {
   padding: 10px 18px;
-  background: #003f88; color: #fff;
-  border: none; border-radius: 8px;
+  background: #003f88;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
   cursor: pointer;
 }
-@media(max-width:768px){ .grid { grid-template-columns: 1fr; } }
+
+/* ===== MOBILE ===== */
+@media(max-width:768px){
+  .grid { grid-template-columns: 1fr; }
+  .icon-wrap span { bottom: -20px; }
+}
 </style>
 </head>
 
 <body>
 
 <div class="header-bar">
-  <button class="icon-btn" onclick="goHome()">🏠</button>
-  <button class="icon-btn" onclick="goBack()">🔁</button>
-  <div class="header-title"><h2>Equipment Information</h2></div>
+  <div class="icon-group">
+    <div class="icon-wrap">
+      <button class="icon-btn" onclick="goHome()" title="Home">🏠</button>
+      <span>Home</span>
+    </div>
+    <div class="icon-wrap">
+      <button class="icon-btn" onclick="goBack()" title="Back">🔁</button>
+      <span>Back</span>
+    </div>
+  </div>
+
+  <div class="header-title">
+    <h2>Equipment Information</h2>
+    <small>Designed and maintained by Rakesh Chandra Sethy</small>
+  </div>
 </div>
 
 <div class="container">
@@ -103,7 +194,10 @@ function showTransformer(c) {
     </div>
 
     <div class="button-wrap">
-      <button class="action-btn" onclick="openHistory()">📜 History</button>
+      <div class="icon-wrap">
+        <button class="action-btn" onclick="openHistory()" title="History">📜 History</button>
+        <span>History</span>
+      </div>
     </div>
   </div>`;
 }
@@ -124,7 +218,10 @@ function showBreaker(c) {
     </div>
 
     <div class="button-wrap">
-      <button class="action-btn" onclick="openHistory()">📜 History</button>
+      <div class="icon-wrap">
+        <button class="action-btn" onclick="openHistory()" title="History">📜 History</button>
+        <span>History</span>
+      </div>
     </div>
   </div>`;
 }
@@ -152,7 +249,10 @@ function showMotor(c) {
     </div>
 
     <div class="button-wrap">
-      <button class="action-btn" onclick="openHistory()">📜 History</button>
+      <div class="icon-wrap">
+        <button class="action-btn" onclick="openHistory()" title="History">📜 History</button>
+        <span>History</span>
+      </div>
     </div>
   </div>`;
 }
