--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@ body { font-family: Arial, sans-serif; margin: 0; background: #f2f6ff; }
 
 .header-title small {
   display: block;
-  font-size: 12px;
-  color: #555;
-  margin-top: 2px;
+  font-size: 15px;      /* ⬅ increased size */
+  font-weight: 600;    /* ⬅ added slight bold */
+  color: #333;         /* ⬅ darker for clarity */
+  margin-top: 4px;     /* ⬅ little more spacing */
 }
+
 
 /* ===== ICON BUTTONS ===== */
 .icon-group {
@@ -116,8 +118,9 @@ body { font-family: Arial, sans-serif; margin: 0; background: #f2f6ff; }
 /* ===== MOBILE ===== */
 @media(max-width:768px){
   .grid { grid-template-columns: 1fr; }
-  .icon-wrap span { bottom: -20px; }
+  .header-title small { font-size: 14px; }  /* ⬅ mobile-friendly */
 }
+
 </style>
 </head>
 
